FIX: server migration

--- a/server/milall.service
+++ b/server/milall.service
@@ -5,8 +5,8 @@ After=network.target network-online.target
 
 [Service]
 Type=simple
-WorkingDirectory=/home/luftaquila/HDD/mil-all/server
-ExecStart=/usr/local/bin/node /home/luftaquila/HDD/mil-all/server/server.js
+WorkingDirectory=/home/luftaquila/mil-all/server
+ExecStart=/usr/bin/node /home/luftaquila/mil-all/server/server.js
 Restart=always
 
 [Install]
